# workflow_testing

./: README.md  environment.yml  ex.py  pyproject.toml  setup.py  top  toto  yo.md
.github/workflows/: blank.yml  build.yml  deploy-doc.yml  release.yml
tutorials/: test1.txt
tutorials/subtuto/: test2.txt
tutorials/subtuto/susbub/: ok.txt
version/3.0.0/: yo.md
workflow_testing/: __init__.py
