[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-testing"
description = "Fake library"
readme = "README.md"
authors=[
  {name= "Nolwen"},
]
license={text = "MIT"}
requires-python = ">=3.7"
dependencies = [
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_testing*"]

[tool.setuptools.dynamic]
version = {attr = "workflow_testing.__version__"}

[tool.mypy]
ignore_missing_imports = true
